Se importa toda la data para empezar a usar angular.material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,17 +20,17 @@
 </ul>
 
 
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul>
+<mat-form-field>
+    <textarea matInput placeholder="Autosize textarea" matTextareaAutosize matAutosizeMinRows="2"
+              matAutosizeMaxRows="5"></textarea>
+  </mat-form-field>
+  
+
+
+
+
+
+
 
 <div>
   <app-basic>cargando app...</app-basic>
