--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 </ul>
 
 
-<button (click) ="eventoLocoUno('pulsadoxD')">  botonAPI </button>
+<button (click) ="eventoLocoUno()">  botonAPI </button>
 
 
 
