initial crud Basic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,3 +51,8 @@
 <p>valor del componenete es: {{value}}  suck! </p>
 
 
+
+<h4>--------------------------------</h4>
+<app-crudBasic> </app-crudBasic>
+
+
