FIX DEPLOY implementacion de api

--- a/src/app/subCompoUsuario/app.subCompoUsuario.html
+++ b/src/app/subCompoUsuario/app.subCompoUsuario.html
@@ -10,7 +10,7 @@
       </mat-form-field>
 
       <mat-form-field>
-          <input  matInput type="number" name="identityNumber" [(ngModel)]=itemC.identityNumber  placeholder="Nro Identidad">
+          <input  matInput type="number" name="id_number" [(ngModel)]=itemC.id_number  placeholder="Nro Identidad">
       </mat-form-field>
                 <!-- falta revisar esto!!!!!!!!!!!! -->
       <mat-form-field>
@@ -28,7 +28,7 @@
       </mat-form-field>
 
       <mat-form-field>
-          <input  matInput type="string" name="firstName" [(ngModel)]=itemC.firstName  placeholder="Primer Nombre">
+          <input  matInput type="string" name="first_name" [(ngModel)]=itemC.first_name  placeholder="Primer Nombre">
       </mat-form-field>
 
       <mat-form-field>
