--- a/src/app/subCompoMedico/app.subCompoMedico.html
+++ b/src/app/subCompoMedico/app.subCompoMedico.html
@@ -3,11 +3,24 @@
   <h2>Formulario De Creacion De Nuevos Medicos</h2>
 
 
-
   <div class="example-container">
- 
-     
-      <mat-form-field class="borderBasic">
+
+      <div class="container">
+          <div class="row">
+            <div class="col-md-12 right">
+                Col 1
+            </div>
+            <div class="col-md-6">
+                Col 2
+            </div>
+            <div class="col-md-6">
+                Col 3
+            </div>
+          </div>
+        </div>
+
+        
+      <mat-form-field class="col-12 borderBasic">
         <input matInput type="string" name="id" [(ngModel)]=itemC.id  placeholder="Id">
       </mat-form-field>
 
